agregue un section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Bienvenidos a mi web</h1>
     <p>agregue un parrafo</p>
+    <section>
+        <h2>agrego un h2 </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, repudiandae?</p>
+    </section>
 </body>
 </html>
