--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Mi Web</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Nosotros</a></li>
+        </ul>
+    </nav>
     <h1>Bienvenidos a mi web</h1>
     <p>agregue un parrafo</p>
     <section>
