--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <h2>agrego un h2 </h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, repudiandae?</p>
     </section>
+    <footer>
+        <p>Hecho con ❤</p>
+    </footer>
 </body>
 </html>
